[package]
name = "tdeckterm"
version = "0.1.0"
authors = ["Todd Stellanova <tstellanova@users-noreply.github.com>"]
edition = "2021"
license = "BSD3"

[features]
# enable embedded graphics
emdisplay = []
# enable sdcard support
sdcard = []
# enable lorawan support
lorawan = []


[dependencies]
esp32s3-hal = { version = "0.11.0" }
esp-backtrace = { version = "0.7.0", features = ["esp32s3", "panic-handler", "exception-handler", "print-uart"] }
esp-println       = { version = "0.5.0", features = ["esp32s3"] }
#critical-section  = "1.1.2"
mipidsi = "0.7.1"
embedded-graphics = "0.8.1"
display-interface = "0.4.1"
display-interface-spi = "0.4.1"
#embedded-graphics-framebuf = "0.5.0"
sx126x = "0.1.1"
embedded-sdmmc = "0.5.0"
shared-bus = "0.3.0"