[package]
name = "tweedeck"
version = "0.1.0"
authors = ["Todd Stellanova <tstellanova@users-noreply.github.com>"]
edition = "2021"
license = "BSD3"



[dependencies]
embedded-hal = { version = "0.2.7" }
esp32s3-hal = { version = "0.12.0" }
esp-backtrace = { version = "0.7.0", features = ["esp32s3", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.5.0", features = ["esp32s3"] }
#esp-alloc = { version = "0.3.0" }
critical-section = "1.1.2"
mipidsi = {version="0.7.1", optional=true}
embedded-graphics = {version="0.8.1", optional=true}
display-interface = {version="0.4.1", optional=true}
display-interface-spi = {version="0.4.1", optional=true}

embedded-sdmmc = {version="0.5.0", optional=true}
#shared-bus = { version="0.3.0" , features = ["xtensa"] }
shared-bus = { git = "https://github.com/tstellanova/shared-bus", branch = "wip_xtensa_fun", features = ["xtensa"] }

#sx126x = { version = "0.1.1", optional=true }
sx126x = { path = "../sx126x-rs", version = "0.1.1", optional=true }



[features]
# enable embedded graphics
emdisplay = ["mipidsi", "embedded-graphics", "display-interface", "display-interface-spi" ]
# enable sdcard support
sdcard = ["embedded-sdmmc"]
# enable lorawan support
lorawan = ["sx126x"]
